--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "expo": "~36.0.0",
+    "formik": "^2.1.1",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
@@ -18,7 +19,8 @@
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
     "react-navigation-stack": "^1.10.3",
-    "reinstall": "^2.0.0"
+    "reinstall": "^2.0.0",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0"
