--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-navigation-drawer": "^2.3.3",
     "react-navigation-stack": "^1.10.3",
     "reinstall": "^2.0.0",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "yup": "^0.28.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0"
